<resources>
    <string name="app_name">FamilyCare Micro</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_phone">Mobile</string>
    <string name="hint_address">Address</string>
    <string name="hint_packages">Packages</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_marital">Marital Status</string>
    <string name="hint_dob">Date of Birth (dd/mm/yyyy)</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <!--<string name="btn_link_to_register">Not a member? Sign up now.</string>-->
    <!--<string name="btn_link_to_login">Already registred! Login Me.</string>-->
    <string name="btn_pay">PAY</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="company_name">FamilyCare Funeral Trust</string>
    <string name="company_motto">Today\'s Wisdom, Tomorrow\'s Peace of Mind </string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="packages">
        <item>Bronze Lite</item>
        <item>Silver Lite</item>
        <item>Gold Lite</item>
    </string-array>


    <!--new set-->
    <string name="description_logo">Dashboard</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Feature 1</string>
    <string name="title_feature2">Feature 2</string>
    <string name="title_feature3">Feature 3</string>
    <string name="title_feature4">Feature 4</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>

    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>

    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Twitter, Google IO, and Evernote.</string>
    <string name="search_intro">Content for the Search page goes here.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

</resources>
