<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.familycaretrust.familycaremicro.beneActivity"
    android:background="#d6e6e7"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_weight="1"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/nomName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/nomRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="Relationship"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/nomPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/nomAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_address"
            android:inputType="text"
            android:maxLines="2"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/nomGender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_gender"
            android:inputType="text"
            android:maxLines="2"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/picDate"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:onClick="datePicker"
                android:background="@drawable/ic_date_range_black_24dp"
                />
            <EditText
                android:id="@+id/nomDob"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@color/white"
                android:hint="Pick DoB"
                android:inputType="date"
                android:maxLines="2"
                android:padding="10dp"
                android:onClick="datePicker"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />
        </LinearLayout>

        <EditText
            android:id="@+id/nomMarital"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_marital"
            android:inputType="text"
            android:maxLines="2"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <RadioGroup
            android:id="@+id/nomPackage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <RadioButton android:id="@+id/nomPack6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bronze Lite"
                android:layout_weight="1"/>
            <RadioButton android:id="@+id/nomPack7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Silver Lite"
                android:layout_weight="1"/>
            <RadioButton android:id="@+id/nomPack8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gold Lite"
                android:layout_weight="1"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#d50000"

                android:text="Cancel"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btnAddNomiees"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00BFA5"
                android:text="Submit"
                android:textColor="#fff" />
        </LinearLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
